# LeePickerX

./: .gitignore  CMakeLists.txt  Definations.h  README.md  deploy.bat  icons.rar
Addons/blender_command_port/: __init__.py  command_port.py
Saved/: ASPicker.json  abc.json  test.json
Scripts/: BlenderCommandPort.py  BlenderStartup.py  MayaCommandPort.py  UserSetup.mel  UserSetup.py  clientPort.py  connectPort.py  note.py  testBlender.py  testCommandPort.py
Scripts/maya/: testCommandPort.py
include/: Definations.h  LeePickerPython.h  leeSendCommands.h  leepickeritem.h  leepickerscene.h  leepickerview.h  mainwindow.h  pickeritem.h  pickerscene.h  singleton.h
src/: leeGlobal.hpp  leeSendCommands.cpp  leepickeritem.cpp  leepickerscene.cpp  leepickerview.cpp  main.cpp  mainwindow.cpp  pickeritem.cpp  pickerscene.cpp
startup/: BlenderStartup.py
ui/: ComfirmDialog.ui  ScriptEditor.ui  leePicker.qrc  leePicker.ui
